cmake_minimum_required(VERSION 3.25)

# 1. Diciamo a CMake che stiamo sviluppando un OS (disabilita i test di linking che fallivano)
set(CMAKE_SYSTEM_NAME Generic)
set(CMAKE_TRY_COMPILE_TARGET_TYPE STATIC_LIBRARY)

project(MultiPandOS LANGUAGES C ASM)

# 2. Aggiunto il compilatore specifico per Fedora alla ricerca
find_program(RISCV_GCC_UNKNOWN riscv64-unknown-elf-gcc)
find_program(RISCV_GCC riscv64-elf-gcc)
find_program(RISCV_GCC_LINUX riscv64-linux-gnu-gcc)

if(RISCV_GCC_UNKNOWN)
    set(XT_PRG_PREFIX riscv64-unknown-elf-)
elseif(RISCV_GCC)
    set(XT_PRG_PREFIX riscv64-elf-)
elseif(RISCV_GCC_LINUX)
    set(XT_PRG_PREFIX riscv64-linux-gnu-)
endif()

set(URISCV_SRC /usr/local/share/uriscv)
if(EXISTS "/usr/include/uriscv")
    set(URISCV_INC /usr/include)
elseif(EXISTS "/usr/local/include/uriscv")
    set(URISCV_INC /usr/local/include)
endif()

# Ora il prefisso sarà corretto e userà riscv64-linux-gnu-gcc
set(CMAKE_C_COMPILER ${XT_PRG_PREFIX}gcc)
set(CMAKE_ASM_COMPILER ${XT_PRG_PREFIX}gcc)
set(CMAKE_C_LINKER ${XT_PRG_PREFIX}ld)

add_link_options(-nostdlib -T ${URISCV_SRC}/uriscvcore.ldscript -march=rv32imfd)
add_compile_options(-ffreestanding -static -nostartfiles -nostdlib -I${URISCV_INC} -ggdb -Wall -O0 -std=gnu99 -march=rv32imafd -mabi=ilp32d)

add_executable(MultiPandOS
  ./klog.c phase1/pcb.c phase1/asl.c phase2/functions.c phase2/initial.c phase2/scheduler.c phase2/exceptions.c phase2/interrupts.c phase3/functions.c phase3/initProc.c phase3/vmSupport.c phase3/sysSupport.c
    ${URISCV_SRC}/crtso.S ${URISCV_SRC}/liburiscv.S)

add_custom_target(
	MultiPandOSuRISCV ALL
	COMMAND uriscv-elf2uriscv -k ${PROJECT_BINARY_DIR}/MultiPandOS
	BYPRODUCTS MultiPandOS.core.uriscv MultiPandOS.stab.uriscv
	DEPENDS MultiPandOS
)
